1998-12-13  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuni.adb: Discard definition of an unit mapped on a
	partition with Failed_On_Restart reconnection mode (0004-G13).

1998-12-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuni.adb: Once invalidate an unit status can be either
	Undefined or Invalidate depending on the reconnection mode. Handle 
	this case correctly (0004-G11).

1998-12-11  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuti.ads, s-garuti.adb: Made Error_Type a limited private
	type to prevent misuses and copies.
	Add a procedure Raise_Communication_Error that raises the
	exception Communication_Error with the content of the error
	string. This fixes a memory leak.

	* s-gartcp.adb: No need to initialize Error_Type variables anymore.
	Do not pass Stream_Element_Array on the stack for Physical_Receive
	as it is likely to cause segmentation faults for large data.
	
	* s-garfil.adb: Likewise.

	* s-garpar.adb: Likewise.

	* s-garter.adb: Likewise.

	* s-garuni.adb: Likewise.

	* s-rpc.adb, s-rpcpoo.adb, s-rpstio.adb: Likewise.

	* s-garhea.adb: Likewise.

	* s-parint.adb: Recode the exception raising accordingly with
	the new spec of Error_Type.

	* s-stratt.adb: Optimize integer coding (the most frequent case)
	on some kind of machines (Sun).

1998-12-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-rpc.adb: Make a difference between a RPC receiver abortion due
 	to a partition crash and a RPC caller abortion due to a task
 	abortion (0004-G09).

	* s-garuni.adb: If unit status is Defined and a request wants to
	change it into Declared, just ignore. A partition is trying to
	register an already registered unit (0004-G10).

	* s-garpar.adb: Fix a problem of boot on main partition.

	* s-rpc.adb: Fix a bug in RPC abortion.

1998-12-09  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.in, Makefile.am: Fix a filemode problem.
	
	* s-parint.adb, s-rpc.adb: Move call to
 	Register_Unit_On_Boot_Server from RPC.Establish_RPC_Receiver to